--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <p>hello world!</p>
-    <h2>hello!</h2>
+    <h2>hello!
+    </h2>
     <script src="style.js"></script>
 </body>
 
