--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <p>hello world!</p>
     <h2>hello!
     </h2>
-    <script src="style.js"></script>
-</body>
+    <script src="script.js"></script>
 
 </html>
