--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <p>hello world!</p>
-    <h2>hello!
-    </h2>
-    <script src="script.js"></script>
+    <h1>
+        htllo world
+    </h1>
+</body>
 
 </html>
