--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Змейка</title>
+    <link rel="stylesheet" href="main.css">
+    <style></style>
 </head>
 
 <body>
-    <h1>
-        hello world
-    </h1>
-    <h2> hello</h2>
+    <!-- Рисуем игровое поле -->
+    <canvas width="600" height="600" id="game"></canvas>
+    <!-- Сам скрипт с игрой -->
+    <script src="script.js"></script>
 </body>
 
 </html>
